<resources>
    <string name="app_name">Tutory</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or_create_account">Create an account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_chat_message_view">ChatMessageActivity</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="e_mail">eMail</string>
    <string name="create_account">Create Account</string>
    <string name="tutory">Tutory</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="university_name">University Name</string>
    <string name="or_proceed_without_logging_in">Or continue without account</string>
    <string name="proceed_without_logging_in">Continue without account</string>

    <string name="error_complete_field">Please complete this field</string>
    <string name="error_password_match">Passwords don´t match</string>
    <string name="error_password_invalid">Invalid password</string>
    <string name="error_email_invalid">Invalid email</string>
    <string name="error_password_weak">Weak password</string>
    <string name="error_email_used">Email already used</string>
    <string name="error_password_incorrect">Wrong password</string>
    <string name="error_email_not_registered">There is no account linked with that email</string>
    <string name="error_unknown">Unknown error, try again later</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="proceed">Proceed</string>
    <string name="continue_text">Continue</string>
    <string name="back">Back</string>
    <string name="choose_university">Choose University</string>
    <string name="select_university">Select University</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_chats">Chats</string>
    <string name="title">Title</string>
    <string name="specification">Specification</string>
    <string name="email">Email</string>
    <string name="university">University</string>
    <string name="courses_taught">Courses Taught</string>
    <string name="loading">Loading...</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_courses_taught">Courses Taught</string>
    <string name="search_hint">search</string>
    <string name="user_parcel">USER_PARCEL</string>
    <string name="add_course">Add Course</string>
    <string name="title_activity_course_view">CourseViewActivity</string>
    <string name="title_activity_user_view">UserViewActivity</string>

    <string-array name="universities">
        <item>ITBA</item>
        <item>UdeSA</item>
        <item>UADE</item>
        <item>UCA</item>
    </string-array>
</resources>
