<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.fragments.ContinueWithoutSigningInFragment">

    <TextView
        android:id="@+id/continueWithoutSigningInSelectUniversity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/select_university"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/continueWithoutSigningInTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/continueWithoutSigningInTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/continueWithoutSigningInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continueWithoutSigningInSelectUniversity"
        android:hint="@string/university">
        <AutoCompleteTextView
            android:id="@+id/university_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorBackButton"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/continueWithoutSigningInButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/continueWithoutSigningInTextInputLayout" />

    <Button
        android:id="@+id/continueWithoutSigningInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowDx="2"
        android:shadowDy="10"
        android:text="@string/continue_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/goBackButton"
        app:layout_constraintTop_toBottomOf="@id/continueWithoutSigningInTextInputLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>