<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <Button
        android:id="@+id/regular_signin_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:backgroundTint="@color/colorButtonBlue"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="10"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/google_signin_button"
        app:layout_constraintEnd_toStartOf="@+id/google_signin_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/google_signin_button"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:backgroundTint="@color/colorEditTextBlue"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorEditTextTextBlue"
        android:textColorLink="@color/colorEditTextBlue"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/colorEditTextBlue"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/colorEditTextTextBlue"
        android:textColorLink="@color/colorEditTextBlue"
        app:layout_constraintBottom_toTopOf="@+id/google_signin_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100dp"
        android:text="@string/sign_in"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createNewAccountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:autoLink="web"
        android:focusable="true"
        android:text="@string/or_create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_signin_button" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_signin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/regular_signin_button"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />


</androidx.constraintlayout.widget.ConstraintLayout>