<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tutoryTextView"
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutory"
        android:textSize="50sp"
        android:textAllCaps="true"
        android:letterSpacing="0.4"
        app:layout_constraintBottom_toTopOf="@+id/signInTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signInTextView"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/sign_in"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/signInUsernameTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutoryTextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signInUsernameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:hint="@string/user_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintBottom_toTopOf="@+id/signInPasswordTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInTextView">

        <EditText
            android:id="@+id/signInUsernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/colorEditTextBlue"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorEditTextTextBlue"
            android:textColorLink="@color/colorEditTextBlue" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signInPasswordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintBottom_toTopOf="@+id/regular_signin_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInUsernameTextInputLayout"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/signInPassEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorEditTextBlue"
            android:ems="10"
            android:inputType="textPassword"
            android:textColorHint="@color/colorEditTextTextBlue"
            android:textColorLink="@color/colorEditTextBlue" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/regular_signin_button"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorButtonBlue"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="10"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/signInPasswordTextInputLayout"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/divider"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/regular_signin_button"
        app:layout_constraintBottom_toTopOf="@id/google_signin_button"
        android:paddingHorizontal="75dp"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@android:color/darker_gray"/>
    </RelativeLayout>


    <com.google.android.gms.common.SignInButton
        android:layout_alignBottom="@id/divider"
        android:id="@+id/google_signin_button"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowDx="2"
        android:shadowColor="#000000"
        android:shadowDy="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toTopOf="@id/createNewAccountTV"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.5" />


    <TextView
        android:id="@+id/createNewAccountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autoLink="web"
        android:focusable="true"
        android:text="@string/or_create_account"
        app:layout_constraintTop_toBottomOf="@id/google_signin_button"
        app:layout_constraintBottom_toTopOf="@+id/proceedWithoutLoginTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/proceedWithoutLoginTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="20dp"
        android:autoLink="web"
        android:focusable="true"
        android:text="@string/proceed_without_logging_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createNewAccountTV" />

</androidx.constraintlayout.widget.ConstraintLayout>